[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[dependency-groups]
dev = ["icecream>=2.1.3"]

[project]
authors = [
  { email = "30631553+liblaf@users.noreply.github.com", name = "liblaf" },
]
dependencies = [
  "jaxtyping>=0.2.34",
  "lazy-loader>=0.4",
  "loguru>=0.7.2",
  "pydantic-settings>=2.6.1",
  "pydantic>=2.9.2",
  "rich>=13.9.4",
  "ruamel-yaml>=0.18.6",
  "tomlkit>=0.13.2",
  "tqdm>=4.67.0",
  "ubelt>=1.3.6",
]
description = "Add your description here"
name = "liblaf-toolkit"
readme = "README.md"
requires-python = ">=3.11"
version = "0.0.0"

[project.optional-dependencies]
numpy = ["numpy>=2.1.3"]

[tool.hatch.build.targets.wheel]
packages = ["src/qtk"]

[tool.hatch.metadata]
allow-direct-references = true
